@@ -1,3 +1,9 @@
+2007-07-05  Dan Williams  <dcbw@redhat.com>
+
+	* src/nm-device-802-11-mesh-olpc.c
+	    - (real_act_stage1_prepare): if the activation is user-requested, start
+	        all over at mesh stage 1 (school MPP)
+
 2007-07-03  Dan Williams  <dcbw@redhat.com>
 
 	* src/nm-device-802-11-mesh-olpc.c
